# GoogleAIHackathon

./: README.md  app.py  compose.yml
server/: .env.example  .gitignore  Dockerfile  README.md  concept.excalidraw  pyproject.toml
server/prisma/: dev.db  schema.prisma
server/prisma/migrations/20240428153732_/: migration.sql
server/prisma/migrations/20240428160529_reworked_db_schema/: migration.sql
server/prisma/migrations/20240428161236_added_index/: migration.sql
server/prisma/migrations/20240428175200_changed_message_table/: migration.sql
server/prisma/migrations/20240428175449_changed_chat_message_table/: migration.sql
server/prisma/migrations/20240428181701_dev/: migration.sql
server/prisma/migrations/20240428182324_dev/: migration.sql
server/prisma/migrations/20240429160358_update_chief_complaint_field/: migration.sql
server/prisma/migrations/20240501160003_dev/: migration.sql
server/prisma/migrations/20240501185751_delete_cascade/: migration.sql
server/rag_documents/: Emergency_Triage.md
server/scripts/: inspect_db.py  seed_vectordb.py  start.py  testing.py
server/src/: app.py  main.py
server/src/apis/: index.py
server/src/configs/: index.py
server/src/datasources/: prisma.py
server/src/middlewares/: authentication.py
server/src/saved_models/: lgbm_model.pkl
server/src/services/: README.md  chat_message.py  concept.excalidraw  er_visit.py  rag.py  testing.py
server/src/utils/: discriminators_knowledge_retrieval.py  extracted_data_preprocessing.py  knowledge_graph.py  mts_knowledge_retrieval.py  presentational_knowledge_retrieval.py  qr.py  triage_ml_inference.py
(+35 files in other folders)
